--- a/deploy/app.yml
+++ b/deploy/app.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dashboard-deployment
+  name: journaling-deployment
   labels:
-    app: dashboard
+    app: journaling
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: dashboard
+      app: journaling
   template:
     metadata:
       labels:
-        app: dashboard
+        app: journaling
     spec:
       containers:
-        - name: dashboard
-          image: markoambrozic/dashboard:1.0.2
+        - name: journaling
+          image: markoambrozic/journaling:1.0.0
           ports:
             - containerPort: 8080
           env:
